kubernetes/loki/deploy/promtail/promtail-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: promtail
  name: promtail
  namespace: devops
spec:
  ports:
  - name: http
    port: 3101
    protocol: TCP
    targetPort: 3101
  selector:
    app: promtail
  type: ClusterIP
